examples/test/testpolicy18176.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18176
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key35: value37
      key27: value45
      key42: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value30
          key8: value28
      podSelector:
        matchLabels:
          key2: value22
          key34: value0
          key37: value19
